add preiades to sts